# url-shortener-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1990d3bc9ea7_create_urls_table.py  335e97f2a931_change_created_at_to_datetime.py
app/: config.py  crud.py  database.py  main.py  models.py  schema.py
app/routers/: urls.py
app/utils/: slug_generator.py
tests/: conftest.py  test_urls.py
